[package]
name = "cita-util"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "cita utility library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
cita-types = "0.1"
parking_lot = "0.11.1"
ansi_term = "0.12"
tiny-keccak= "2.0.2"
serde = "1.0"
toml = "0.5"
git2 = "0.13"
rustc_version = "0.4.0"
backtrace = "0.3"
cita-logger = "0.1.0"
